# mol-dyn

./: .gitignore  README.md  parareal-demo.py  requirements.txt
paper/: .gitattributes  .gitignore  Makefile  fig_1.py  fig_2.py  fig_3.py  fig_4.py  fig_5.py  fig_6.py  fig_7.py  main.tex  timesnromanstyle.mplstyle
paper/results/: .gitattributes  out.16.16.zia.10^4.txt  out.32.32.zia.10^4.txt  out.4.4.zia.10^4.txt  out.64.64.zia.10^4.txt  out.serial.zia.10^4.txt  timetest-result.txt
parareal/: dist.py  giants.cfg  job.sh  planets.cfg  serial.sh  test.sh  vis.py
parareal/jobs/: 32.10^5.cfg.sh  base_job.sh  job.16.16.zia.10^4.sh  job.32.32.zenon.10^5.sh  job.32.32.zia.10^4.sh  job.4.4.zia.10^4.sh  job.64.64.zia.10^4.sh  job.serial.32.zenon.10^5.sh  job.serial.32.zia.10^4.sh  job.serial.prec2.zia.10^4.sh  job.serial.prec4.zia.10^4.sh  job.serial.zia.10^4.sh  long.zia.sh
parareal/src/: CMakeLists.txt  config.hpp  integration.hpp  io.hpp  main.cpp  parareal.hpp  simulation.hpp  state.hpp  types.hpp  vec.hpp
ref/: __main__.py  parareal.py  planets.py  simulation.py
scripts/: arraytest.py  dist.py  parareal-demo.py  planets_cfg.py  timetest.py  verify-pot.py  vis.py
scripts/jobs/: timetest-job.sh
